# DRF-todo-list-api

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  conf.py  index.rst  manage.py  pyproject.toml  requirements.txt
task/: models.py  permissions.py  serializers.py  views.py
task/migrations/: 0001_initial.py  0002_task_closed.py
todoListAPI/: asgi.py  settings.py  urls.py  wsgi.py
